styles.css
/* Reset Rules Begin */
html {
  box-sizing: border-box;
  font-size: 18px;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  background: #fff;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol,
ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

/* Reset Rules End */

body {
  align-items: center;
  display: flex;
  font-family: 'Montserrat', sans-serif;
  height: 100vh;
  justify-content: center;
  padding: 2rem;
}

h1,
h2,
h3 {
  margin-bottom: 10px;
  text-transform: uppercase;
}

h1 {
  font-size: 5rem;
  text-align: center;
}

.todo {
  display: flex;
  height: 70vh;
  margin: 2rem;
  width: 90%;
}

.todo__form {
  background: #fefefe;
  border-radius: 10px;
  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  margin-right: 2rem;
  padding: 1rem;
}

.todo__form > * {
  font-family: 'Montserrat', sans-serif;
}

.todo__form input {
  font-size: 1rem;
  margin-bottom: 10px;
  padding: 1rem;
  text-align: center;
}

.todo__form button {
  background: red;
  border: 0;
  border-radius: 35px;
  color: #ffffff;
  cursor: pointer;
  font-size: 1.5rem;
  font-weight: bold;
  letter-spacing: 0.1rem;
  padding: 1rem;
  text-transform: uppercase;
  transition: 0.5s;
}

.todo__form button:hover {
  background: blue;
}

.todo__tasks {
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
}

.todo__tasks__type {
  border-radius: 10px;
  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
  flex: 1 1 auto;
  padding: 1rem;
}

.todo__tasks__type:not(:last-child) {
  margin-bottom: 2rem;
}

.todo__tasks__type--incomplete {
  background: #fefefe;
}

.todo__tasks__type--complete {
  background: #fefefe;
}

.task {
  align-items: center;
  border: 1px solid #999999;
  display: flex;
  padding: 1rem 1rem;
}

.task:not(last-child) {
  margin-bottom: 10px;
}

.task input[type='checkbox'] {
  height: 25px;
  width: 25px;
}

.task__title {
  font-size: 1rem;
  padding: 0 1rem;
}

.task__trash {
  height: 25px;
}

